fixed edit button gap

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,7 +4,14 @@
   border-radius: 10px;
   list-style: none;
 }
-
+.card__list {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  padding: 0;
+  margin: 0;
+}
 .card__image {
   width: 282px;
   height: 282px;
@@ -14,10 +21,7 @@
   display: flex;
   background-color: #fff;
   color: #000;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding: 25px 20px;
   align-items: center;
   justify-content: space-between;
   border-bottom-left-radius: 10px;
@@ -28,6 +32,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
