--- a/blocks/page.css
+++ b/blocks/page.css
@@ -14,6 +14,7 @@
   width: 100%;
   position: relative;
   margin: 0 auto;
+  padding: 0;
 }
 
 @media screen and (max-width: 880px) {
