--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,6 +23,7 @@
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   grid-area: title;
   margin: 0;
 }
@@ -54,10 +55,12 @@
 
 .profile__description {
   font-size: 18px;
-  line-height: 22px;
+  line-height: 21.78px;
   font-weight: 400;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   grid-area: description;
-  margin: 0;
+  margin-top: 7px;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 320px) {
@@ -74,18 +77,26 @@
     width: 282px;
     margin-top: 36px;
   }
+  .profile__edit-button {
+    display: flex;
+    height: 18px;
+    width: 18px;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .profile {
     flex-direction: column;
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
   }
   .profile__info {
     white-space: nowrap;
     max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
   }
   .profile__image {
     margin: 0;
@@ -94,7 +105,7 @@
   .profile__title {
     font-size: 22px;
     font-weight: 500;
-    line-height: 27px;
+    line-height: 26.63px;
     text-align: center;
     margin-top: 30px;
   }
